# Shimakaze.Utils

./: .gitignore  LICENSE  README.MD  Shimakaze.Utils.code-workspace  Shimakaze.Utils.sln
.github/: FUNDING.yml
.github/workflows/: CsfUtilsBuild.yml  MixUtilsBuild.yml
Shimakaze.Utils.Csf/: CsfUtils.cs  Shimakaze.Utils.Csf.csproj  V1.cs  V2.cs
Shimakaze.Utils.Csf.Test/: ConvertUnitTest1.cs  Shimakaze.Utils.Csf.Test.csproj
Shimakaze.Utils.Csf/Data/: Languages.cs
Shimakaze.Utils.Csf/Struct/: CsfStruct.cs
Shimakaze.Utils.Csf/Utils/: BufferUtil.cs  HeadUtil.cs  ValueUtil.cs
Shimakaze.Utils.Mix/: MixUtils.cs  Shimakaze.Utils.Mix.csproj
Shimakaze.Utils.Mix.Native/: CMakeLists.txt
Shimakaze.Utils.Mix.Test/: MixUtilsTest.cs  Shimakaze.Utils.Mix.Test.csproj
Shimakaze.Utils.Mix.Test/Resources/: EncryptedTSTest.mix
Shimakaze.Utils.Mix/Struct/: MixHeader.cs  MixIndexEntry.cs  Shimakaze.Struct.Mix.cs
Shimakaze.Utils.Mix/Utils/: CommonUtil.cs  Native.cs  StructUtil.cs  blowfish.cs
Shimakaze.Utils.Native.Mix/: CMakeLists.txt  Shimakaze.Utils.Native.Mix.cpp
Shimakaze.Utils.Test.Mix/: MixUtilsTest.cs  Shimakaze.Utils.Test.Mix.csproj
Shimakaze.Utils.Test.Mix/Resources/: EncryptedTest.mix  NormalTest.mix
sample/Shimakaze.Utils.Csf.CLI/: Program.cs  Shimakaze.Utils.Csf.CLI.csproj
sample/Shimakaze.Utils.Csf.PowerShell/: Program.ps1
src/Shimakaze.Utils.Csf/: SchemaUrls.cs  Shimakaze.Utils.Csf.csproj  V1.cs
src/Shimakaze.Utils.Csf/Data/: Languages.cs  Versions.cs
src/Shimakaze.Utils.Csf/Struct/: CsfHead.cs  CsfLabel.cs  CsfValue.cs
src/Shimakaze.Utils.Csf/Utils/: CsfUtil.cs  (+2 more)
src/Shimakaze.Utils.Mix/: MixUtils.cs  Shimakaze.Utils.Mix.csproj
test/Shimakaze.Utils.Csf.Test/: Shimakaze.Utils.Csf.Test.csproj
test/Shimakaze.Utils.Mix.Test/: MixUtilsTest.cs  Shimakaze.Utils.Mix.Test.csproj
(+23 files in other folders)
